History
=======

Version 0.7.5 - Unreleased
--------------------------

- Fix #280338: Images in header and footer text were sent with
  relative URLs. [nouri]

- It's now possible to filter channels from the sendnewsletter view.
  Simple by setting channel.sendable=False.
  [tmog]

- Fixed an issue with installing collective.dancing from python.
  The event-listener registering ISalt on creation of a new tool
  no longer depends upon having a request. [tmog]
  
- zope.conf configuration with Virtual Host added in 
  documentation [macadames]  

Version 0.7.4 - 2008-09-19
--------------------------

- Fix an issue where confirming pending subscriptions by visiting the "My 
  subscriptions" page.  If a subscription is already confirmed the dictionary
  ``subscription.metadata`` does not have a key ``pending``.  [saily]

Version 0.7.3 - 2008-09-16
--------------------------

- Rebuild ``collective.dancing.pot`` and updated German
  translation. [saily]

- Removed bug in ``ManageSubscriptionsForm.remove``. When the search box
  was added we also changed the ``ManageSubscriptionsForm.get_items`` method
  to return the secret instead of the name. The remove method was not updated, 
  and delete of subscriptions did not work. [saily]

- Removed bug in CSV-export. Export must have same ordered fields or
  columns as expected on import. As we are using the composer schema
  for import, we should use this for export too. [saily]
  
- Make CSV export and import use the same delimiter.
  [saily]

Version 0.7.2 - 2008-09-15
--------------------------

- Fix an issue where the scheduled send-out would send out items in
  their short form, i.e. only title and description.  [miziodel, nouri]

- Add a search box to the subscriptions administration view.

  Prior versions of S&D didn't populate the subscribers fulltext index
  correctly.  This version adds an upgrade step that you'll need to
  run in order to reindex all your subscription objects.
